局部优化，增加配置读取演示。